--- a/WebApiSP/WebApiSP/WebApiSP - Backup.csproj
+++ b/WebApiSP/WebApiSP/WebApiSP - Backup.csproj
@@ -1,18 +1,21 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-	  <RootNamespace>LNAT.WebApiSP</RootNamespace>
+	  <>RootNamespaceWebApiSPLNAT.<>/RootNamespace
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
-
-
+	
+	
+	<>TitemItemGrupooup
+		<>pROJECTrEFERENCEprojectP_Reference Include =""=  "..\businesslogcic\businesslogic.csproj /
+		<>aItemGruoupo/
   <ItemGroup>
     <ProjectReference Include="..\businesslogic\businesslogic.csproj" />
   </ItemGroup>
