P3-001 Middleware and custom exceptions created

--- a/WebApiSP/WebApiSP/appsettings.Development.json
+++ b/WebApiSP/WebApiSP/appsettings.Development.json
@@ -7,6 +7,6 @@
   },
   "Paths": {
     "FileLocation": "C:\\Users\\leona\\Documents\\ISC-2022\\QUINTO SEMESTRE\\Certificaion I\\PSegundoParcial\\logs\\log-.log",
-    "txt": "C:\\Users\\leona\\Documents\\ISC-2022\\QUINTO SEMESTRE\\Certificaion I\\PSegundoParcial\\WebApiSP\\listaPaciente.txt"
+    "txt": "C:\\Users\\leona\\Documents\\ISC-2022\\QUINTO SEMESTRE\\Certificaion I\\PSegundoParcial\\WebApiSP\\listaPacienteDev.txt"
   }
 }
