--- a/WebApiSP/WebApiSP/appsettings.json
+++ b/WebApiSP/WebApiSP/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ApplicationSettings": {
+    "ApplicationName": "API de Gestión de Pacientes"
+  },
   "AllowedHosts": "*"
 }
