P3-001 Handler error implementet to the added function Code

--- a/WebApiSP/WebApiSP/appsettings.QA.json
+++ b/WebApiSP/WebApiSP/appsettings.QA.json
@@ -8,7 +8,10 @@
   },
   "Paths": {
     "txt": "C:\\Users\\leona\\Documents\\ISC-2022\\QUINTO SEMESTRE\\Certificaion I\\PSegundoParcial\\WebApiSP\\listaPacienteQA.txt",
-    "FileLocation": "C:\\Users\\leona\\Documents\\ISC-2022\\QUINTO SEMESTRE\\Certificaion I\\PSegundoParcial\\logs\\log-.log"
+    "FileLocation": "C:\\Users\\leona\\Documents\\ISC-2022\\QUINTO SEMESTRE\\Certificaion I\\PSegundoParcial\\logs\\log-.log",
+    "ruta": "api/Pacientes/",
+    "Api3": "http://localhost:5080/"
+
 
   }
 }
