--- a/WebApiSP/WebApiSP/appsettings.Development.json
+++ b/WebApiSP/WebApiSP/appsettings.Development.json
@@ -7,6 +7,9 @@
   },
   "Paths": {
     "FileLocation": "C:\\Users\\leona\\Documents\\ISC-2022\\QUINTO SEMESTRE\\Certificaion I\\PSegundoParcial\\logs\\log-.log",
-    "txt": "C:\\Users\\leona\\Documents\\ISC-2022\\QUINTO SEMESTRE\\Certificaion I\\PSegundoParcial\\WebApiSP\\listaPacienteDev.txt"
+    "txt": "C:\\Users\\leona\\Documents\\ISC-2022\\QUINTO SEMESTRE\\Certificaion I\\PSegundoParcial\\WebApiSP\\listaPacienteDev.txt",
+    "ruta": "api/Pacientes/",
+    "Api3": "http://localhost:5080/"
+
   }
 }
